# BerlinWeatherTimeSeriesAnalysis

./: .gitignore  Baseline.ipynb  CollectData.py  LSTM_HPO.ipynb  README.md  TimeSeriesAnalysis.ipynb  data_viz.ipynb  lag-llama.ipynb  lag-llama_finetuned.ipynb  lag-llama_finetuned.py  lag_lama_finetune-demo.py  pyproject.toml  simpleLSTM.ipynb
.ipynb_checkpoints/: TimeSeriesAnalysis-checkpoint.ipynb
DSWorkflow/: Dockerfile
DSWorkflow/cluster/: remote-deployment.yml  storage.yml
berlinweathertimeseriesanalysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lightning_logs/version_0/: hparams.yaml  metrics.csv
lightning_logs/version_1/: metrics.csv
lightning_logs/version_10/: hparams.yaml  metrics.csv
lightning_logs/version_11/: metrics.csv
lightning_logs/version_12/: hparams.yaml  metrics.csv
lightning_logs/version_13/: metrics.csv
lightning_logs/version_14/: metrics.csv
lightning_logs/version_15/: metrics.csv
lightning_logs/version_16/: hparams.yaml  metrics.csv
lightning_logs/version_17/: metrics.csv
lightning_logs/version_18/: metrics.csv
lightning_logs/version_19/: metrics.csv
lightning_logs/version_2/: metrics.csv
lightning_logs/version_20/: hparams.yaml  metrics.csv
lightning_logs/version_21/: metrics.csv
lightning_logs/version_22/: hparams.yaml  metrics.csv
lightning_logs/version_23/: metrics.csv
model_artifacts/: best_hyperparameters.json  optuna_trials.csv
src/: Baseline.ipynb  LSTM_CNN.ipynb  LSTM_HPO.ipynb  TimeSeriesAnalysis.ipynb  arima_baseline_darts.ipynb  lag-llama.ipynb  lag-llama_finetuned.ipynb
(+21 files in other folders)
