[project]
name = "berlinweathertimeseriesanalysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "joblib>=1.5.1",
    "matplotlib>=3.10.3",
    "numpy==1.26.4",
    "optuna>=4.2.0,<5.0",
    "packaging>=25.0",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "statsmodels>=0.14.4",
    "urllib3>=2.4.0",
    "pmdarima>=2.0.4"
]

[build-system]
requires = [
    "setuptools>=61.0",
    "wheel>=0.45.1",
    "Cython>=3.1.2",
    "numpy==1.26.4"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["data", "DSWorkflow"]
